<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView app:id="@id/mainScrollview" app:layout_width="match_parent" app:layout_height="match_parent" app:fillViewport="false" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="24sp" app:textColor="@color/colorPrimary" app:id="@id/pairedDevicesTextView" app:paddingLeft="@dimen/activity_horizontal_margin" app:paddingTop="@dimen/activity_vertical_margin" app:paddingRight="@dimen/activity_horizontal_margin" app:visibility="gone" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/paired_devices" />
            <android.support.v7.widget.RecyclerView app:id="@id/pairedDevicesRecyclerView" app:visibility="gone" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="16dp" app:layout_below="@id/pairedDevicesTextView" />
            <View app:id="@id/pairedSeparator" app:background="#dcdcdc" app:visibility="gone" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="48dp" app:layout_below="@id/pairedDevicesRecyclerView" />
            <RelativeLayout app:id="@id/availableDevicesHeader" app:paddingLeft="@dimen/activity_horizontal_margin" app:paddingRight="@dimen/activity_horizontal_margin" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_marginTop="16dp" app:layout_below="@id/pairedSeparator">
                <TextView app:textSize="24sp" app:textColor="@color/colorPrimary" app:id="@id/availableDevicesTextView" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/available_devices" app:layout_centerVertical="true" />
                <ProgressBar app:id="@id/devicesScanProgress" app:visibility="gone" app:layout_width="UNKNOWN_DATA_0x1801" app:layout_height="UNKNOWN_DATA_0x1801" app:layout_marginLeft="12dp" app:layout_toRightOf="@id/availableDevicesTextView" app:layout_centerVertical="true" />
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView app:id="@id/availableDevicesRecyclerView" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="16dp" app:layout_below="@id/availableDevicesHeader" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.AppBarLayout app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" app:id="@id/appbar" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout app:id="@id/collapsing_toolbar" app:background="@color/colorPrimaryDark" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_scrollFlags="13" app:contentScrim="@color/colorPrimary">
            <ImageView app:id="@id/backdrop" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="48dp" app:src="@drawable/slide03" app:layout_collapseMode="2" />
            <android.support.v7.widget.Toolbar app:id="@id/toolbar" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f01003d" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_scrollFlags="5" app:layout_collapseMode="1" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.FloatingActionButton app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/bt_scan_fab" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="@dimen/activity_vertical_margin" app:src="@drawable/ic_search_white_24dp" app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>
